--- a/package.json
+++ b/package.json
@@ -20,6 +20,22 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "tailwindcss": "3.3.3",
-    "typescript": "5.2.2"
+    "typescript": "5.2.2",
+    "@emailjs/browser": "^3.11.0",
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@heroicons/react": "^2.0.18",
+    "@portabletext/react": "^3.0.4",
+    "framer-motion": "^10.2.5",
+    "next-sanity": "^5.1.2",
+    "react-form-hook": "^0.0.1",
+    "react-hook-form": "^7.45.2",
+    "react-icons": "^4.10.1",
+    "react-slick": "^0.29.0",
+    "sanity": "^3.8.3",
+    "slick-carousel": "^1.8.1"
+  },
+  "devDependencies": {
+    "@types/react-slick": "^0.23.10"
   }
 }
